<resources>
    <string name="app_name">Surf And Rhino Books</string>


    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Label for overflow menu option that allows user to add a new book [CHAR LIMIT=20] -->
    <string name="action_add_new_book">Add New Book</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_save">Save Book</string>

    <!-- Label for overflow menu option that allows user to add a new book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete Book</string>


    <!-- Label for unknown supplier -->
    <string name="unknown_supplier">Supplier Unknown</string>

    <!-- Label for unknown phone number -->
    <string name="unknown_phone_number">Not Available</string>

    <!-- Label for book name category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_name">Book Name</string>

    <!-- Label for price category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_price">Price</string>

    <!-- Label for quantity category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_quantity">Quantity</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_supplier">Supplier</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_supplier_phone">Supplier Phone</string>

    <!-- Text hint for book name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Book Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Product Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Qty</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier">Supplier</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_phone">Supplier Phone Number</string>



    <!-- Units for type of currency (USD) [CHAR LIMIT=1] -->
    <string name="unit_book_price">$</string>


    <string name="editor_activity_title_new_book">Add a Book</string>

    <string name="editor_activity_title_edit_book">Edit Book</string>

    <string name="editor_insert_book_failed">Book addition failed</string>

    <string name="editor_insert_book_successful">Book added successfully</string>

    <string name="editor_update_book_failed">Book failed to update</string>

    <string name="editor_update_book_successful">Book updated successfully</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="sale_ok">Sale accepted</string>
    <string name="sale_failed">Sale failed</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="button" />
    <string name="button_call">Call Supplier</string>
    <string name="call_supplier_message">Would you like to call the supplier?</string>
    <string name="call_supplier_yes">Yes</string>
    <string name="call_supplier_no">No</string>
    <string name="decrease_quantity">-</string>
    <string name="increase_quantity">+</string>
    <string name="empty_view_title_text">Add a new book by clicking the menu above!</string>
    <string name="category_activity_book_name">Book Name:</string>
    <string name="category_activity_book_price">Book Price:</string>
    <string name="category_activity_book_quantity">Quantity:</string>
    <string name="category_activity_book_supplier">Supplier</string>
    <string name="category_activity_book_supplier_phone">Phone:</string>
    <string name="editor_fields_must_be_filled">All fields must be filled to save.</string>
    <string name="editor_no_phone_number_available">No phone number to call</string>
    <string name="current_inventory">Current Inventory</string>
    <string name="category_add_book">Add Book</string>
</resources>
