<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Book Name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Book price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/edit_book_price"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_book_price"
                        android:inputType="number" />

                    <!-- Units for price (USD) -->
                    <TextView
                        android:id="@+id/label_book_units"
                        style="@style/EditorUnitsStyle"
                        android:text="@string/unit_book_price" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Book Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:paddingRight="78dp"
            android:text="@string/category_book_quantity" />

        <!-- Input fields -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/decrease_quantity" />

            <EditText
                android:id="@+id/edit_book_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/increase_quantity" />

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="2"-->
        <!--android:paddingLeft="4dp"-->
        <!--android:orientation="vertical">-->

        <!--&lt;!&ndash; Quantity field &ndash;&gt;-->
        <!--<EditText-->
        <!--android:id="@+id/edit_book_quantity"-->
        <!--android:hint="@string/hint_book_quantity"-->
        <!--android:inputType="number"-->
        <!--style="@style/EditorFieldStyle" />-->

        <!--</LinearLayout>-->

    </LinearLayout>

    <!-- Book Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_book_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Book Supplier Phone category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_book_supplier_phone" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/edit_book_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supplier_phone"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Button category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/button" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/edit_call_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/button_call" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>








